==> IOsonata/IOsonata/ARM/Nordic/nRF54/src/uart_nrf54x.cpp <==
#include <string.h>
#include <stdio.h>
#include <stdint.h>
#include <stdarg.h>
#include "nrf.h"
#include "nrf_peripherals.h"
#include "istddef.h"
#include "iopinctrl.h"
#include "coredev/uart.h"
#include "interrupt.h"
#include "coredev/shared_intrf.h"
#define NRFX_UART_HWFIFO_SIZE		8
#define NRFX_UART_MAXDEV			UARTE_COUNT
#define NRFX_UART_DMA_MAXCNT		((1<<UARTE0_EASYDMA_MAXCNT_SIZE)-1)
#define NRFX_UART_RXDMA_SIZE		(NRFX_UART_HWFIFO_SIZE)
#define NRFX_UART_TXDMA_SIZE		(4 * NRFX_UART_HWFIFO_SIZE)
#define NRFX_UART_CFIFO_SIZE		CFIFO_MEMSIZE(4 * NRFX_UART_HWFIFO_SIZE)

static void UartIrqHandler(int DevNo, DevIntrf_t * const pDev)
{
	nRFUartDev_t *dev = (nRFUartDev_t *)pDev->pDevData;
	int len = 0;
	int cnt = 0;

	if (dev->pDmaReg->EVENTS_FRAMETIMEOUT)
	{
		dev->pDmaReg->EVENTS_FRAMETIMEOUT = 0;
		dev->pDmaReg->TASKS_DMA.RX.STOP = 1;
	}

	if (dev->pDmaReg->EVENTS_RXTO)
	{
		dev->pDmaReg->TASKS_FLUSHRX = 1;
		dev->pDmaReg->EVENTS_RXTO = 0;
	}

	if (dev->pDmaReg->EVENTS_DMA.RX.END)
	{
		// No DMA support for RX, just clear the event
		dev->pDmaReg->EVENTS_RXDRDY = 0;
		dev->pDmaReg->EVENTS_DMA.RX.END = 0;
		dev->RxDmaCnt = 0;

		int l = dev->pDmaReg->DMA.RX.AMOUNT;
		uint8_t *p = CFifoPutMultiple(dev->pUartDev->hRxFifo, &l);
		if (p)
		{
			memcpy(p, dev->RxDmaMem, l);
		}
		else
		{
			dev->pUartDev->RxDropCnt++;
		}

		dev->pUartDev->bRxReady = false;
		//dev->pDmaReg->RXD.MAXCNT = NRFX_UART_BUFF_SIZE;
		//dev->pDmaReg->RXD.PTR = (uint32_t)dev->RxDmaMem;
		dev->pDmaReg->TASKS_DMA.RX.START = 1;
	}

	if (dev->pDmaReg->EVENTS_RXDRDY)
	{
		uint8_t *d;

		dev->pDmaReg->EVENTS_RXDRDY = 0;
		dev->RxDmaCnt++;
		if (dev->pUartDev->EvtCallback)
		{
			len = CFifoUsed(dev->pUartDev->hRxFifo);
			cnt = dev->pUartDev->EvtCallback(dev->pUartDev, UART_EVT_RXDATA, NULL, len);
		}
	}

	if (dev->pDmaReg->EVENTS_TXDRDY)
	{

		dev->pDmaReg->EVENTS_TXDRDY = 0;
		cnt = 0;
	}

	if (dev->pDmaReg->EVENTS_DMA.TX.END || dev->pDmaReg->EVENTS_TXSTOPPED)
	{
		dev->pDmaReg->EVENTS_DMA.TX.END = 0;
		dev->pDmaReg->EVENTS_TXSTOPPED = 0;

		int l = NRFX_UART_TXDMA_SIZE;//min(CFifoUsed(pDev->pUartDev->hTxFifo), NRF52_UART_DMA_MAX_LEN);
		uint8_t *p = CFifoGetMultiple(dev->pUartDev->hTxFifo, &l);
		if (p)
		{
			dev->pUartDev->bTxReady = false;

			// Transfer to tx cache before sending as CFifo will immediately make the memory
			// block available for reuse in the Put request. This could cause an overwrite
			// if uart tx has not completed in time.
			memcpy(&dev->TxDmaMem, p, l);

			dev->pDmaReg->DMA.TX.MAXCNT = l;
			dev->pDmaReg->DMA.TX.PTR = (uint32_t)dev->TxDmaMem;
			dev->pDmaReg->TASKS_DMA.TX.START = 1;
		}
		else
		{
			dev->pUartDev->bTxReady = true;
		}
		if (dev->pUartDev->EvtCallback)
		{
			//uint8_t buff[NRFUART_CFIFO_SIZE];

			//len = min(NRFUART_CFIFO_SIZE, CFifoAvail(s_nRFxUARTDev.pUartDev->hTxFifo));
			len = CFifoAvail(dev->pUartDev->hTxFifo);
			len = dev->pUartDev->EvtCallback(dev->pUartDev, UART_EVT_TXREADY, NULL, len);
			if (len > 0)
			{
				//s_nRFxUARTDev.bTxReady = false;
				//nRFUARTTxData(&s_nRFxUARTDev.pUartDev->SerIntrf, buff, len);
			}
		}
	}

	// Handle errors
	if (dev->pDmaReg->EVENTS_ERROR)
	{
		uint32_t err = dev->pDmaReg->ERRORSRC;
		dev->pDmaReg->EVENTS_ERROR = 0;

		if (err & UARTE_ERRORSRC_OVERRUN_Msk)
		{
			dev->pUartDev->RxOvrErrCnt++;
			len = 0;

			dev->pDmaReg->TASKS_DMA.RX.STOP = 1;
		}
		if (err & UARTE_ERRORSRC_FRAMING_Msk)
		{
			dev->pUartDev->FramErrCnt++;
		}
		if (err & UARTE_ERRORSRC_PARITY_Msk)
		{
			dev->pUartDev->ParErrCnt++;
		}
		if (err & UARTE_ERRORSRC_BREAK_Msk)
		{
		}
		dev->pDmaReg->ERRORSRC = err;
		len = 0;
		if (dev->pUartDev->EvtCallback)
		{
			dev->pUartDev->EvtCallback(dev->pUartDev, UART_EVT_LINESTATE, NULL, len);
		}
		dev->pDmaReg->TASKS_DMA.RX.START = 1;
	}

	if (dev->pDmaReg->EVENTS_CTS)
	{
		dev->pDmaReg->EVENTS_CTS = 0;
		dev->pUartDev->LineState &= ~UART_LINESTATE_CTS;
        if (dev->pUartDev->EvtCallback)
        {
            uint8_t buff = 0;
            len = 1;
            dev->pUartDev->EvtCallback(dev->pUartDev, UART_EVT_LINESTATE, &buff, len);
        }
		//NRF_UART0->TASKS_STARTTX = 1;
		//s_nRFxUARTDev.bTxReady = true;
	}

	if (dev->pDmaReg->EVENTS_NCTS)
	{
		dev->pDmaReg->EVENTS_NCTS = 0;
		dev->pUartDev->LineState |= UART_LINESTATE_CTS;
		//NRF_UART0->TASKS_STOPTX = 1;
        if (dev->pUartDev->EvtCallback)
        {
            uint8_t buff = UART_LINESTATE_CTS;
            len = 1;
            dev->pUartDev->EvtCallback(dev->pUartDev, UART_EVT_LINESTATE, &buff, len);
        }
	}
}

static void nRFUARTEnable(DevIntrf_t * const pDev)
{
	nRFUartDev_t *dev = (nRFUartDev_t *)pDev->pDevData;

	dev->pUartDev->RxOvrErrCnt = 0;
	dev->pUartDev->ParErrCnt = 0;
	dev->pUartDev->FramErrCnt = 0;
	dev->pUartDev->RxDropCnt = 0;
	dev->pUartDev->TxDropCnt = 0;
	dev->RxDmaCnt = 0;

	CFifoFlush(dev->pUartDev->hTxFifo);

	dev->pDmaReg->PSEL.RXD = dev->RxPin;
	dev->pDmaReg->PSEL.TXD = dev->TxPin;
	dev->pDmaReg->PSEL.CTS = dev->CtsPin;
	dev->pDmaReg->PSEL.RTS = dev->RtsPin;

	dev->pDmaReg->ENABLE |= (UARTE_ENABLE_ENABLE_Enabled << UARTE_ENABLE_ENABLE_Pos);
	dev->pDmaReg->DMA.RX.MAXCNT = NRFX_UART_RXDMA_SIZE;
	dev->pDmaReg->DMA.RX.PTR = (uint32_t)dev->RxDmaMem;
	dev->pDmaReg->EVENTS_DMA.RX.END = 0;
	dev->pDmaReg->TASKS_DMA.RX.START = 1;
	dev->pUartDev->bTxReady = true;
}

bool UARTInit(UARTDev_t * const pDev, const UARTCfg_t *pCfg)
{
	// Config I/O pins
	if (pDev == NULL || pCfg == NULL)
	{
		return false;
	}

	if (pCfg->pIOPinMap == NULL || pCfg->NbIOPins <= 0)
	{
		return false;
	}

	if (pCfg->DevNo < 0 || pCfg->DevNo >= s_NbUartDev)
	{
		return false;
	}
#if 0
	// Start HF clock if needed
	if (NRF_CLOCK->XO.STAT == 0)
	{
		NRF_CLOCK->TASKS_XOSTART = 1;
		int timout = 1000000;
		while (timout-- > 0 && NRF_CLOCK->EVENTS_XOSTARTED == 0);

		if (timout <= 0)
			return false;

		NRF_CLOCK->EVENTS_XOSTARTED = 0;
	}
#endif

	int devno = pCfg->DevNo;
	NRF_UARTE_Type *reg = s_nRFxUARTDev[devno].pDmaReg;

	// Force power on in case it was powered off previously
	//*(volatile uint32_t *)((uint32_t)reg + 0xFFC);
	//*(volatile uint32_t *)((uint32_t)reg + 0xFFC) = 1;

	if (pCfg->pRxMem && pCfg->RxMemSize > 0)
	{
		pDev->hRxFifo = CFifoInit(pCfg->pRxMem, pCfg->RxMemSize, 1, pCfg->bFifoBlocking);
	}
	else
	{
		pDev->hRxFifo = CFifoInit(s_nRFxUARTDev[devno].RxFifoMem, NRFX_UART_CFIFO_SIZE, 1, pCfg->bFifoBlocking);
	}

	if (pCfg->pTxMem && pCfg->TxMemSize > 0)
	{
		pDev->hTxFifo = CFifoInit(pCfg->pTxMem, pCfg->TxMemSize, 1, pCfg->bFifoBlocking);
	}
	else
	{
		pDev->hTxFifo = CFifoInit(s_nRFxUARTDev[devno].TxFifoMem, NRFX_UART_CFIFO_SIZE, 1, pCfg->bFifoBlocking);
	}

	IOPinCfg_t *pincfg = (IOPinCfg_t*)pCfg->pIOPinMap;

	IOPinSet(pincfg[UARTPIN_TX_IDX].PortNo, pincfg[UARTPIN_TX_IDX].PinNo);
	IOPinCfg(pincfg, pCfg->NbIOPins);

	pDev->DevIntrf.pDevData = &s_nRFxUARTDev[devno];
	s_nRFxUARTDev[devno].pUartDev = pDev;

	// DMA mode avail only, force DMA
	pDev->DevIntrf.bDma = true;

	s_nRFxUARTDev[devno].RxPin = (pincfg[UARTPIN_RX_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_RX_IDX].PortNo << 5);
	s_nRFxUARTDev[devno].TxPin = (pincfg[UARTPIN_TX_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_TX_IDX].PortNo << 5);
	s_nRFxUARTDev[devno].pDmaReg->PSEL.RXD = s_nRFxUARTDev[devno].RxPin;
	s_nRFxUARTDev[devno].pDmaReg->PSEL.TXD = s_nRFxUARTDev[devno].TxPin;
    //s_nRFxUARTDev[devno].pDmaReg->CONFIG &= ~(UARTE_CONFIG_PARITY_Msk << UARTE_CONFIG_PARITY_Pos);

    uint32_t cnf = (pCfg->DataBits << UARTE_CONFIG_FRAMESIZE_Pos) & UARTE_CONFIG_FRAMESIZE_Msk;


    if (pCfg->Parity != UART_PARITY_NONE)
	{
		cnf |= UARTE_CONFIG_PARITY_Included << UARTE_CONFIG_PARITY_Pos;
		cnf |= pCfg->Parity == UART_PARITY_ODD ? (UARTE_CONFIG_PARITYTYPE_Odd << UARTE_CONFIG_PARITYTYPE_Pos) :
							  (UARTE_CONFIG_PARITYTYPE_Even << UARTE_CONFIG_PARITYTYPE_Pos);
	}

    cnf |= pCfg->StopBits == 2 ? UARTE_CONFIG_STOP_Two << UARTE_CONFIG_STOP_Pos : UARTE_CONFIG_STOP_One << UARTE_CONFIG_STOP_Pos;

    if (pCfg->FlowControl == UART_FLWCTRL_HW)
	{
    	cnf |= (UARTE_CONFIG_HWFC_Enabled << UARTE_CONFIG_HWFC_Pos);
//    	s_nRFxUARTDev[devno].pDmaReg->CONFIG |= (UARTE_CONFIG_HWFC_Enabled << UARTE_CONFIG_HWFC_Pos);
    	s_nRFxUARTDev[devno].CtsPin = (pincfg[UARTPIN_CTS_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_CTS_IDX].PortNo << 5);
    	s_nRFxUARTDev[devno].RtsPin = (pincfg[UARTPIN_RTS_IDX].PinNo & 0x1f) | (pincfg[UARTPIN_RTS_IDX].PortNo << 5);
    	s_nRFxUARTDev[devno].pDmaReg->PSEL.CTS = s_nRFxUARTDev[devno].CtsPin;
    	s_nRFxUARTDev[devno].pDmaReg->PSEL.RTS = s_nRFxUARTDev[devno].RtsPin;

    	IOPinClear(pincfg[UARTPIN_CTS_IDX].PortNo, pincfg[UARTPIN_CTS_IDX].PinNo);
        IOPinClear(pincfg[UARTPIN_RTS_IDX].PortNo, pincfg[UARTPIN_RTS_IDX].PinNo);
	}
	else
	{
//		s_nRFxUARTDev[devno].pDmaReg->CONFIG &= ~(UARTE_CONFIG_HWFC_Enabled << UARTE_CONFIG_HWFC_Pos);
		s_nRFxUARTDev[devno].pDmaReg->PSEL.RTS = -1;
		s_nRFxUARTDev[devno].pDmaReg->PSEL.CTS = -1;
		s_nRFxUARTDev[devno].CtsPin = -1;
		s_nRFxUARTDev[devno].RtsPin = -1;
	}

    cnf |= UARTE_CONFIG_ENDIAN_LSB << UARTE_CONFIG_ENDIAN_Pos;
    cnf |= UARTE_CONFIG_FRAMETIMEOUT_Msk;

    reg->CONFIG = cnf;

    // Set baud
    pDev->Rate = nRFUARTSetRate(&pDev->DevIntrf, pCfg->Rate);

    reg->FRAMETIMEOUT = 8;
    reg->EVENTS_RXDRDY = 0;
	reg->EVENTS_TXDRDY = 0;
	reg->EVENTS_ERROR = 0;
	reg->EVENTS_RXTO = 0;
	reg->EVENTS_TXSTOPPED = 0;
	reg->EVENTS_CTS = 0;
	reg->ERRORSRC = 0xFFFFFFFF;


	s_nRFxUARTDev[devno].pUartDev->bRxReady = false;
	s_nRFxUARTDev[devno].pUartDev->bTxReady = true;
	s_nRFxUARTDev[devno].pUartDev->RxOvrErrCnt = 0;
	s_nRFxUARTDev[devno].pUartDev->ParErrCnt = 0;
	s_nRFxUARTDev[devno].pUartDev->FramErrCnt = 0;
	s_nRFxUARTDev[devno].pUartDev->RxDropCnt = 0;
	s_nRFxUARTDev[devno].pUartDev->TxDropCnt = 0;
	s_nRFxUARTDev[devno].RxDmaCnt = 0;

	pDev->DevIntrf.bTxReady = true;
	pDev->DevIntrf.bNoStop = false;
//	pDev->DevIntrf.bDma = pCfg->bDmaEn;
	pDev->DevIntrf.bIntEn = pCfg->bIntMode;
	pDev->DevIntrf.Type = DEVINTRF_TYPE_UART;
	pDev->DataBits = pCfg->DataBits;
	pDev->FlowControl = pCfg->FlowControl;
	pDev->StopBits = pCfg->StopBits;
	pDev->bIrDAFixPulse = pCfg->bIrDAFixPulse;
	pDev->bIrDAInvert = pCfg->bIrDAInvert;
	pDev->bIrDAMode = pCfg->bIrDAMode;
	pDev->IrDAPulseDiv = pCfg->IrDAPulseDiv;
	pDev->Parity = pCfg->Parity;
	pDev->EvtCallback = pCfg->EvtCallback;
	pDev->DevIntrf.Disable = nRFUARTDisable;
	pDev->DevIntrf.Enable = nRFUARTEnable;
	pDev->DevIntrf.GetRate = nRFUARTGetRate;
	pDev->DevIntrf.SetRate = nRFUARTSetRate;
	pDev->DevIntrf.StartRx = nRFUARTStartRx;
	pDev->DevIntrf.RxData = nRFUARTRxData;
	pDev->DevIntrf.StopRx = nRFUARTStopRx;
	pDev->DevIntrf.StartTx = nRFUARTStartTx;
	pDev->DevIntrf.TxData = nRFUARTTxData;
	pDev->DevIntrf.StopTx = nRFUARTStopTx;
	pDev->DevIntrf.MaxRetry = UART_RETRY_MAX;
	pDev->DevIntrf.PowerOff = nRFUARTPowerOff;
	pDev->DevIntrf.GetHandle = nRFUARTGetHandle;
	pDev->DevIntrf.EnCnt = 1;
	atomic_flag_clear(&pDev->DevIntrf.bBusy);

	apply_workaround_for_enable_anomaly(&s_nRFxUARTDev[devno]);

	s_nRFxUARTDev[devno].pDmaReg->ENABLE = (UARTE_ENABLE_ENABLE_Enabled << UARTE_ENABLE_ENABLE_Pos);

	s_nRFxUARTDev[devno].pDmaReg->DMA.RX.MAXCNT = NRFX_UART_RXDMA_SIZE;
	s_nRFxUARTDev[devno].pDmaReg->DMA.RX.PTR = (uint32_t)s_nRFxUARTDev[devno].RxDmaMem;
	s_nRFxUARTDev[devno].pDmaReg->EVENTS_DMA.RX.END = 0;
	s_nRFxUARTDev[devno].pDmaReg->TASKS_DMA.RX.START = 1;

    reg->INTENCLR = 0xffffffffUL;

	if (pCfg->bIntMode)
	{
		SharedIntrfSetIrqHandler(pCfg->DevNo, &pDev->DevIntrf, UartIrqHandler);

		if (pDev->DevIntrf.bDma == true)
		{
			s_nRFxUARTDev[devno].pDmaReg->INTENSET = (UARTE_INTENSET_RXDRDY_Set << UARTE_INTENSET_RXDRDY_Pos) |
							  (UARTE_INTENSET_RXTO_Set << UARTE_INTENSET_RXTO_Pos) |
							  (UARTE_INTENSET_TXDRDY_Set << UARTE_INTENSET_TXDRDY_Pos) |
							  (UARTE_INTENSET_ERROR_Set << UARTE_INTENSET_ERROR_Pos) |
							  (UARTE_INTENSET_CTS_Set << UARTE_INTENSET_CTS_Pos) |
							  (UARTE_INTENSET_NCTS_Set << UARTE_INTENSET_NCTS_Pos) |
							  (UARTE_INTENSET_DMARXEND_Set << UARTE_INTENSET_DMARXEND_Pos) |
							  (UARTE_INTENSET_DMATXEND_Set << UARTE_INTENSET_DMATXEND_Pos) |
							  (UARTE_INTEN_FRAMETIMEOUT_Enabled << UARTE_INTEN_FRAMETIMEOUT_Pos);
		}

		switch (devno)
		{
		case 0:
			NVIC_ClearPendingIRQ(SERIAL30_IRQn);
			NVIC_SetPriority(SERIAL30_IRQn, pCfg->IntPrio);
			NVIC_EnableIRQ(SERIAL30_IRQn);
			break;
		case 1:
			NVIC_ClearPendingIRQ(SERIAL20_IRQn);
			NVIC_SetPriority(SERIAL20_IRQn, pCfg->IntPrio);
			NVIC_EnableIRQ(SERIAL20_IRQn);
			break;
		case 2:
			NVIC_ClearPendingIRQ(SERIAL21_IRQn);
			NVIC_SetPriority(SERIAL21_IRQn, pCfg->IntPrio);
			NVIC_EnableIRQ(SERIAL21_IRQn);
			break;
		case 3:
			NVIC_ClearPendingIRQ(SERIAL22_IRQn);
			NVIC_SetPriority(SERIAL22_IRQn, pCfg->IntPrio);
			NVIC_EnableIRQ(SERIAL22_IRQn);
			break;
		case 4:
			NVIC_ClearPendingIRQ(SERIAL00_IRQn);
			NVIC_SetPriority(SERIAL00_IRQn, pCfg->IntPrio);
			NVIC_EnableIRQ(SERIAL00_IRQn);
			break;
        }
    }


	return true;
}
